--- a/inventory/group_vars/bf.yml
+++ b/inventory/group_vars/bf.yml
@@ -4,9 +4,9 @@
 checkout_zone: Africa
 country_code: BF
 currency: XOF
-locale: fr_BF
-available_locales: fr_BF,en_FR
-language: en_US.UTF-8
+locale: fr-BF
+available_locales: fr-BF,en_FR
+language: fr_BF.UTF-8
 language_packages:
   - language-pack-en-base
   - language-pack-fr-base
