--- a/inventory/host_vars/staging.mahofood.com/config.yml
+++ b/inventory/host_vars/staging.mahofood.com/config.yml
@@ -5,8 +5,12 @@ host_id: bf-staging
 rails_env: staging
 
 admin_email: contact@ikatrans.com
+developer_email: contact@ikatrans.com
 
 mail_domain: ikatrans.com
 
 certbot_domains:
   - staging.mahofood.com
+
+users_sysadmin:
+  - "{{ ika_devs }}"
