update the core devs

--- a/inventory/group_vars/bf.yml
+++ b/inventory/group_vars/bf.yml
@@ -19,3 +19,4 @@ developer_email: contact@ikatrans.com
 # Users listed here will have their key from /files/keys added to the unicorn_user
 users_sysadmin:
   - "{{ ika_devs }}"
+  - "{{ core_devs }}"
