--- a/inventory/group_vars/bf.yml
+++ b/inventory/group_vars/bf.yml
@@ -5,7 +5,7 @@ checkout_zone: Africa
 country_code: BF
 currency: XOF
 locale: fr-BF
-available_locales: fr-BF,en_FR
+available_locales: fr-BF,en_LB
 language: fr_BF.UTF-8
 language_packages:
   - language-pack-en-base
